--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,5 +12,6 @@
 @import "../scss/secciones/sobre-mi";
 @import "../scss/secciones/portfolio";
 @import "../scss/secciones/bodas";
+@import "../scss/secciones/estudio";
 @import "../scss/secciones/contacto";
 @import "../scss/secciones/testimonios";
