--- a/scss/secciones/_bodas.scss
+++ b/scss/secciones/_bodas.scss
@@ -1,7 +1,7 @@
-.paginas_portfolio-bodas{
+.paginas_portfolio_bodas{
     background-image: url('../../images/bodas/bodasFondo.jpg');
 }
-.paginas_portfolio-grilla{
+.paginas_portfolio_bodas-grilla{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
@@ -24,61 +24,61 @@
             height:100%;
         }
     }
-    .paginas_portfolio-grilla1{
+    .paginas_portfolio_bodas-grilla1{
         grid-area: b1;
     }
-    .paginas_portfolio-grilla2{
+    .paginas_portfolio_bodas-grilla2{
         grid-area: b2;
     }
-    .paginas_portfolio-grilla3{
+    .paginas_portfolio_bodas-grilla3{
         grid-area: b3;
     }
-    .paginas_portfolio-grilla4{
+    .paginas_portfolio_bodas-grilla4{
         grid-area: b4;
     }
-    .paginas_portfolio-grilla5{
+    .paginas_portfolio_bodas-grilla5{
         grid-area: b5;
     }
-    .paginas_portfolio-grilla6{
+    .paginas_portfolio_bodas-grilla6{
         grid-area: b6;
     }
-    .paginas_portfolio-grilla7{
+    .paginas_portfolio_bodas-grilla7{
         grid-area: b7;
     }
-    .paginas_portfolio-grilla8{
+    .paginas_portfoli_bodaso-grilla8{
         grid-area: b8;
     }
-    .paginas_portfolio-grilla9{
+    .paginas_portfolio_bodas-grilla9{
         grid-area: b9;
     }
-    .paginas_portfolio-grilla10{
+    .paginas_portfolio_bodas-grilla10{
         grid-area: b10;
     }
-    .paginas_portfolio-grilla11{
+    .paginas_portfolio_bodas-grilla11{
         grid-area: b11;
     }
-    .paginas_portfolio-grilla12{
+    .paginas_portfolio_bodas-grilla12{
         grid-area: b12;
     }
-    .paginas_portfolio-grilla13{
+    .paginas_portfolio_bodas-grilla13{
         grid-area: b13;
     }
-    .paginas_portfolio-grilla14{
+    .paginas_portfolio_bodas-grilla14{
         grid-area: b14;
     }
-    .paginas_portfolio-grilla15{
+    .paginas_portfolio_bodas-grilla15{
         grid-area: b15;
     }
-    .paginas_portfolio-grilla16{
+    .paginas_portfolio_bodas-grilla16{
         grid-area: b16;
     }
-    .paginas_portfolio-grilla17{
+    .paginas_portfolio_bodas-grilla17{
         grid-area: b17;
     }
-    .paginas_portfolio-grilla18{
+    .paginas_portfolio_bodas-grilla18{
         grid-area: b18;
     }
-    .paginas_portfolio-grilla19{
+    .paginas_portfolio_bodas-grilla19{
         grid-area: b19;
     }
 } 
