Fiestas de 15 Terminado

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,5 +13,6 @@
 @import "../scss/secciones/portfolio";
 @import "../scss/secciones/bodas";
 @import "../scss/secciones/estudio";
+@import "../scss/secciones/fiestasde15";
 @import "../scss/secciones/contacto";
 @import "../scss/secciones/testimonios";
