--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,5 +14,6 @@
 @import "../scss/secciones/bodas";
 @import "../scss/secciones/estudio";
 @import "../scss/secciones/fiestasde15";
+@import "../scss/secciones/exteriores";
 @import "../scss/secciones/contacto";
 @import "../scss/secciones/testimonios";
