--- a/css/style.css
+++ b/css/style.css
@@ -12282,16 +12282,16 @@ footer .footer_contacto a img {
   overflow: hidden;
 }
 .index2 .index2_portfolio div:nth-of-type(1) {
-  background: url("../../images/portfolio/portfolio_bodas.JPG") no-repeat 50%/cover;
+  background: url("../../images/portfolio/portfolio_bodas.jpg") no-repeat 50%/cover;
 }
 .index2 .index2_portfolio div:nth-of-type(2) {
-  background: url("../../images/portfolio/portfolio_estudio.JPG") no-repeat 50%/cover;
+  background: url("../../images/portfolio/portfolio_estudio.jpg") no-repeat 50%/cover;
 }
 .index2 .index2_portfolio div:nth-of-type(3) {
-  background: url("../../images/portfolio/portfolio_fiestade15.JPG") no-repeat 50%/cover;
+  background: url("../../images/portfolio/portfolio_fiestade15.jpg") no-repeat 50%/cover;
 }
 .index2 .index2_portfolio div:nth-of-type(4) {
-  background: url("../../images/portfolio/portfolio_exteriores.JPG") no-repeat 50%/cover;
+  background: url("../../images/portfolio/portfolio_exteriores.jpg") no-repeat 50%/cover;
 }
 .index2 .index2_portfolio div a .index2_portfolio_contenido {
   font-size: 1.5rem;
