--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -76,16 +76,16 @@
             position: relative;
             overflow: hidden;
             &:nth-of-type(1) {
-                background: url("../../images/portfolio/portfolio_bodas.JPG") no-repeat 50% / cover;
+                background: url("../../images/portfolio/portfolio_bodas.jpg") no-repeat 50% / cover;
             }
             &:nth-of-type(2) {
-                background: url("../../images/portfolio/portfolio_estudio.JPG") no-repeat 50% / cover;
+                background: url("../../images/portfolio/portfolio_estudio.jpg") no-repeat 50% / cover;
             }
             &:nth-of-type(3) {
-                background: url("../../images/portfolio/portfolio_fiestade15.JPG") no-repeat 50% / cover;
+                background: url("../../images/portfolio/portfolio_fiestade15.jpg") no-repeat 50% / cover;
             }
             &:nth-of-type(4) {
-                background: url("../../images/portfolio/portfolio_exteriores.JPG") no-repeat 50% / cover;
+                background: url("../../images/portfolio/portfolio_exteriores.jpg") no-repeat 50% / cover;
             }
             a{
                 .index2_portfolio_contenido{
